@@ -4,6 +4,9 @@
 3646.	[bug]		Journal filename string could be set incorrectly,
                         causing garbage in log messages.  [RT #34738]
 
+3639.	[bug]		Treat type 65533 (KEYDATA) as opaque except when used
+			in a key zone. [RT #34238]
+
 	--- 9.8.6 released ---
 
 3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is 
